--- a/css/style-library.css
+++ b/css/style-library.css
@@ -50,6 +50,7 @@ body {
     }
     .header-right {
         justify-content: flex-end;
+        border: 0px solid #a3f321;
         gap: 10px;
         margin-right: 30px;
     }
@@ -64,7 +65,10 @@ body {
             padding: 0px 20px;
             border-radius: 5px;
             background-color: rgb(66, 72, 57);
-            color: rgb(201, 199, 193);    
+            color: rgb(201, 199, 193);  
+            width: 150px;  
+            text-align: center;
+            line-height: 30px;
         }
         .reset:hover {
             background-color: gray;
@@ -106,7 +110,10 @@ body {
         border-radius: 5px; 
         background-color: rgb(69, 74, 62);
     }
-
+    .add-card:hover {
+        box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
+       
+    }
     .add-card:active {
          box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
        
@@ -225,6 +232,12 @@ a {
     position: relative;
     display: flex;
 }
+.nadd-card:hover {
+    
+        box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
+       
+    
+}
 .title {
     border: 0px solid gray;
     flex: 0 30px;
@@ -232,6 +245,8 @@ a {
     padding-top: 10px;
     font-size: 18px;
     color:aliceblue;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .author {
@@ -242,14 +257,16 @@ a {
     font-size: 14px;
     font-weight: 200;
     color:rgb(129, 153, 173);
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .rule {
     border-top: 1px solid rgb(149, 152, 151);
     flex: 0 90px;
-    width: 170px;
+    width: 195px;
     align-items: center;
-    margin-left: 35px;
+    margin-left: 25px;
     max-height: 5px;
 }
 .pages, .genre {
@@ -268,12 +285,12 @@ a {
     align-items: flex-end;
 }
 .card-footer-book-read {
-    border: 0 solid gray;
+    border: 0px solid gray;
     display:flex;
     justify-content: flex-start;
     flex: 1 100%;
     margin-left: 15px;
-    width: 160px;
+    width: 170px;
     line-height: 9px;
     color:rgb(87, 123, 86);
 }
@@ -307,9 +324,9 @@ a {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    /*overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
   }
   
   /* Modal Content */
@@ -323,7 +340,7 @@ a {
     padding: 0;
     border: 1px dotted gray;
     width: 340px;
-    height: 368px;
+    height: 338px;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -357,6 +374,8 @@ a {
     font-size: 32px;
     font-weight: bold;
     border: 0px dotted gray;
+    margin-top: 10px;
+    margin-right: 5px;
   }
   
   .close:hover,
@@ -371,6 +390,8 @@ a {
   .modal-header {
     padding: 3px 8px;
     color: white;
+    border: 0px dotted gray;
+    margin-top: 1px;
   }
   .book-add-form {
     display: flex;
