--- a/css/style-library.css
+++ b/css/style-library.css
@@ -73,7 +73,7 @@ body {
 .header-cont {
     display:flex;
     align-items: center;
-    height: 45px;
+    height: 50px;
     background-color: rgb(87, 101, 65);
     box-shadow: 0px 0px 4px 0 rgba(0, 0, 0, 0.2), 0 0px 10px 0 rgba(0, 0, 0, 0.19);
     border-radius: 0px;
@@ -84,8 +84,10 @@ body {
         flex: 1;
     }
     .header-left-inside2 {
+        border: 0px solid #a3f321;
+        line-height: 25px;
         font-size: 20px;
-        font-weight: 100;
+        font-weight: 600;
     }
     .header-left-inside1 {
         padding-top: 3px;
@@ -98,7 +100,7 @@ body {
     }
     .header-right {
         justify-content: flex-end;
-        border: px solid #a3f321;
+        border: 0px solid #a3f321;
         gap: 10px;
         margin-right: 30px;
     }
@@ -109,18 +111,20 @@ body {
             margin-bottom: 5px;
             font-size: 18px;
             font-weight: 100;
-            border: 1px solid #a3f321;
+            border: 1px solid rgb(201, 199, 193);
             padding: 0px 20px;
             border-radius: 5px;
             background-color: rgb(66, 72, 57);
             color: rgb(201, 199, 193);  
             width: 80px;  
             text-align: center;
-            line-height: 30px;
+            line-height: 28px;
         }
         .reset:hover {
-            background-color: gray;
-
+            background-color: rgb(87, 101, 65);
+        }
+        .reset:active {
+            background-color: white;
         }
 
 /* If the screen is bigger than a tablet, dont' center the flex items*/    
@@ -192,7 +196,7 @@ body {
     background-color: rgb(87, 101, 65);
     text-align: center;
     border-top: 1px solid #272c28;
-    color: aliceblue;    
+    color: aliceblue;   
 }
 
 a {
@@ -207,6 +211,7 @@ a {
     display: inline-block;
     width: 38px;
     height: 10px;
+    
   }
   /* Hide default HTML checkbox */
   .switch input {
@@ -280,21 +285,26 @@ a {
     position: relative;
     display: flex;
 }
-.nadd-card:hover {
-    
+.nadd-card:hover {    
         box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
-       
-    
 }
 .title {
     border: 0px solid gray;
     flex: 0 30px;
     text-align: center;
-    padding-top: 10px;
-    font-size: 18px;
+    margin-top: 20px;
+    font-size: 22px;
     color:aliceblue;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 5px;
+}
+img {
+    border: 0px solid gray;
+}
+.delete-text {
+    border: 1px solid gray;
+
 }
 
 .author {
@@ -302,11 +312,12 @@ a {
     flex: 0 30px;
     text-align: center;
     padding-top: 0px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 200;
     color:rgb(129, 153, 173);
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 5px;
 }
 
 .rule {
@@ -316,6 +327,8 @@ a {
     align-items: center;
     margin-left: 25px;
     max-height: 5px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 .pages, .genre {
     border: 0px solid gray;
@@ -324,31 +337,33 @@ a {
     font-size: 14px;
     font-weight: 100;
     color:rgb(129, 153, 173);
+    margin-top: 5px;
 }
 .card-footer {
+    border: 0px solid gray;
     display: flex;
     position: absolute;
     bottom: 20px;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 .card-footer-book-read {
     border: 0px solid gray;
     display:flex;
     justify-content: flex-start;
     flex: 1 100%;
-    margin-left: 15px;
-    width: 170px;
-    line-height: 9px;
+    margin-left: 25px;
+    width: 160px;
     color:rgb(87, 123, 86);
+    line-height: 9px;
+    margin-top: 8px;
 }
 .card-footer-delete {
     border: 0px solid gray;
     display:flex;
     justify-content: flex-end;
-    flex: 1 15%;
+    flex: 1 ;
     width: 40px;
-    line-height: 14px;
 }
 .status {
     padding-left: 3px;
