--- a/css/style-library.css
+++ b/css/style-library.css
@@ -58,6 +58,7 @@ h1, h2, h3 {
     padding: 0;
 }
 html {
+    
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
 }
@@ -163,7 +164,7 @@ body {
         max-width: 250px;
         width: 100%;
         box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
-        border-radius: 5px; 
+        border-radius: 10px; 
         background-color: rgb(69, 74, 62);
     }
     .add-card:hover {
@@ -280,13 +281,13 @@ a {
 
     display: flex;
     flex-direction: column;
-    border: 1px dotted gray;
+    border: 0px dotted aliceblue;
     flex: 1 250px;
     height: 280px;
     max-width: 250px;
     width: 100%;
     box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px; 
+    border-radius: 10px; 
     background-color: rgb(69, 74, 62);
     position: relative;
     display: flex;
@@ -300,11 +301,12 @@ a {
     text-align: center;
     margin-top: 20px;
     font-size: 22px;
-    font-weight: 300;
+    font-weight: 350;
     color:aliceblue;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 5px;
+    font-style: oblique;
 }
 
 .tooltip-title {
@@ -390,14 +392,17 @@ a {
     border-style: solid;
     border-color:  white transparent transparent transparent;
   }  
-
-
+/*
+.tooltip-author, .tooltip-pages, .tooltip-title {    
+    box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+*/
 .author {
     border: 0px solid gray;
     flex: 0 ;
     text-align: center;
     font-size: 16px;
-    font-weight: 200;
+    font-weight: 400;
     color:rgb(129, 153, 173);
     margin-left: 10px;
     margin-right: 10px;
@@ -443,27 +448,25 @@ a {
     margin-left: 0px;
     width: 160px;
     color:rgb(87, 123, 86);
-    line-height: 9px;
+    line-height: 12px;
     margin-top: 8px;
 }
 .card-footer-delete {
     border: 0px solid gray;
     display:flex;
     justify-content: flex-end;
-    flex: 1 ;
-    width: 40px;
+    flex: 1;
+    width: 35px;
 }
 
 /* add border to debug */
 .author, .title, .pages, .genre, .card-footer-book-read{    
     border: 0px solid gray;
 }
-.status {
-    padding-left: 3px;
-}
+
 .special {
     font-weight: 300;
-    color:aliceblue;
+    color:rgb(227, 237, 210);
 }
 
  /* END CSS FOR BOOK CARD CONTENT */
@@ -482,7 +485,7 @@ a {
     height: 100%; /* Full height */
     /*overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
   }
   
   /* Modal Content */
@@ -491,10 +494,10 @@ a {
 
 
     position: relative;
-    background-color:  rgb(66, 72, 57);
+    /*background-color:  rgb(66, 72, 57);*/
     margin: auto;
     padding: 0;
-    border: 1px dotted gray;
+    border: 1px solid gray;
     width: 340px;
     height: 365px;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -502,13 +505,13 @@ a {
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
     animation-duration: 0.4s;
-    border-radius: 5px;
+    border-radius: 10px;
   }
 
   .modal-content {
     display: flex;
     flex-direction: column;
-    border: 1px dotted gray;
+    border: 1px solid rgb(16, 174, 69);
     flex: 1 auto;
     margin: 5px;
     border-radius: 5px;
@@ -556,7 +559,7 @@ a {
     margin-top: 19px;
   }
   label {
-    color:rgb(129, 153, 173);
+    color:rgb(248, 249, 249);
     font-size: 14px;
   }
 
@@ -660,7 +663,7 @@ a {
   }
 
   .line {
-    border-top: 1px dotted rgb(149, 152, 151);
+    border-top: 1px solid rgb(149, 152, 151);
     width: 94%;
     align-items: center;
     max-height: 5px;
