final touches, added padding to the botton of the main container so cards are not hidden.

--- a/css/style-library.css
+++ b/css/style-library.css
@@ -137,6 +137,7 @@ body {
             flex-flow: row wrap;
             align-items: center;
             padding-top: 50px;
+            padding-bottom: 100px;
             gap: 25px;
             height: 100%;
             margin-left: 50px;
@@ -151,6 +152,7 @@ body {
             justify-content: center;
             align-items: center;
             padding-top: 50px;
+            height: 100%;
             gap: 15px;
         }    
 
@@ -196,7 +198,7 @@ body {
 .footer {
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     padding: 10px;
     background-color: rgb(87, 101, 65);
