--- a/css/style-library.css
+++ b/css/style-library.css
@@ -296,7 +296,9 @@ a {
 }
 .nadd-card:hover {    
         box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(25, 210, 84, 0.19);
-}
+
+        border: 1px dotted aliceblue;
+    }
 .nadd-card:active {    
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
 }
