added some bad ass effects to cards.

--- a/css/style-library.css
+++ b/css/style-library.css
@@ -172,11 +172,14 @@ body {
     .add-card:hover {
         box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
         cursor:pointer;
+        
+        transform: translateY(-2px) translateX(-2px);
        
     }
     .add-card:active {
          box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
        
+         transform: translateY(2px) translateX(2px);
     }
 
     .new-book::before {
@@ -296,13 +299,16 @@ a {
 }
 .nadd-card:hover {    
         box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(25, 210, 84, 0.19);
-
         border: 1px dotted aliceblue;
+        
+        transform: translateY(-2px) translateX(-2px);
     }
+
 .nadd-card:active {    
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
     
     border: 0px dotted aliceblue;
+    transform: translateY(2px) translateX(2px);
 }
 .title {
     border: 1px solid gray;
@@ -695,9 +701,10 @@ a {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
   }
+
   
   @keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
-  }
+  } 
   
